# image_captioning

./: CMakeLists.txt  README.md  references.txt
config/: config.json  vocabulary.json
include/: caption_generator.hpp  config.hpp  expected.hpp  image_preprocessor.hpp  logger.hpp  model_inference.hpp  vocabulary.hpp
src/: caption_generator.cpp  config.cpp  image_preprocessor.cpp  logger.cpp  main.cpp  model_inference.cpp  vocabulary.cpp
